--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -4,8 +4,9 @@ on:
     push:
         branches:
             - master
+    workflow_dispatch: # 手动触发
     schedule:
-        - cron: '5 19 * * *' # 3:05开始
+        - cron: '5 16 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -13,6 +14,8 @@ jobs:
         steps:
             - name: Checkout codes
               uses: actions/checkout@v2
+              with:
+                ref: 'master'
             - name: Use Node.js
               uses: actions/setup-node@v1
               with:
@@ -22,4 +25,5 @@ jobs:
             - run: node app.js
               env:
                 JD_COOKIE: ${{ secrets.JD_COOKIE }}
+                JD_COOKIE_2: ${{ secrets.JD_COOKIE_2 }} 
                 PUSH_KEY: ${{ secrets.PUSH_KEY }}
